order IT still in progress; given/when should be completed; working on asserts